--- a/src/components/landing/Structure.astro
+++ b/src/components/landing/Structure.astro
@@ -69,37 +69,77 @@
           </svg>
         </div>
         <p
-          class="text-3xl mt-6 font-medium lg:text-4xl tracking-tight text-primary dark:text-slate-200"
+          class="text-xl mt-6 font-medium lg:text-2xl tracking-tight text-primary dark:text-slate-200"
         >
-          Experience Scalp Painting Art
+          WHAT IS SCALP MICROPIGMENTATION?
         </p>
         <p
           class="mt-4 text-sm text-slate-950 dark:text-slate-200 font-light lg:text-xl"
         >
-          Are you looking for an innovative and elegant way to transform your
-          image? Scalp Painting is the trend you need to know. This
-          revolutionary method combines coloring and design techniques to offer
-          you a fresh, modern, and completely personalized look.
-          <br />
-          <br />
-          Scalp Painting is an advanced hair coloring technique that focuses on painting
-          the scalp to create unique visual effects. This technique not only enhances
-          your style but also offers creative solutions for common issues such as
-          baldness or thinning hair.
-          <br />
-          <br />
-          This technique not only enhances your style but also offers creative solutions
-          for common issues such as baldness or thinning hair. By carefully selecting
-          and applying the right pigments, we can provide the illusion of greater
-          hair density or even mimic the appearance of a closely shaved head. Scalp
-          Painting is ideal for those who want to regain confidence and achieve a
-          youthful, dynamic look without the need for invasive procedures.
-          <br />
-          <br />
-          Discover the transformative power of Scalp Painting and take the first
-          step towards a more confident, stylish you. Contact us today to schedule
-          a consultation and learn more about how this innovative technique can revolutionize
-          your appearance.
+          <ul
+            style="list-style: disc;"
+            class="mt-4 text-sm text-slate-950 dark:text-slate-200 list-style"
+          >
+            <li>
+              Uses specially formulated pigments for cosmetic scalp tattooing.
+            </li>
+            <li>Non-invasive, unlike hair transplant.</li>
+            <li>Minimun recovery time.</li>
+            <li>Replicates the look of hair follicles.</li>
+            <li>Gives the illusion of a fuller, denser head of hair.</li>
+            <li>
+              Hides scars from hair transplants, injuries, surgeries, etc.
+            </li>
+            <li>Nearly undetectable results.</li>
+            <li>Cost-effective and affordable!</li>
+          </ul>
+        </p>
+        <p
+          class="text-xl mt-6 font-medium lg:text-2xl tracking-tight text-primary dark:text-slate-200"
+        >
+          WHO IS A CANDIDATE FOR SMP?
+        </p>
+        <p
+          class="mt-4 text-sm text-slate-950 dark:text-slate-200 font-light lg:text-xl"
+        >
+          <ul
+            style="list-style: disc;"
+            class="mt-4 text-sm text-slate-950 dark:text-slate-200 list-style"
+          >
+            <li>SMP is beneficial for both men and women.</li>
+            <li>
+              Suitable for anyone facing hair thinning, baldness, or Alopecia.
+            </li>
+            <li>
+              Ideal for those who have had unsuccessful hair transplant
+              surgeries.
+            </li>
+            <li>
+              Perfect for individuals who are tired of using temporary solutions
+              like powders or hair fibers.
+            </li>
+            <li>
+              Great for those who no longer want to cover their scalp with hats
+              or scarves.
+            </li>
+            <li>
+              Ideal for anyone looking to regain confidence in their appearance.
+            </li>
+          </ul>
+        </p>
+        <p
+          class="text-xl mt-6 font-medium lg:text-2xl tracking-tight text-primary dark:text-slate-200"
+        >
+          INTERESTED IN LEARNING MORE ABOUT SMP?
+        </p>
+        <p
+          class="mt-4 text-sm text-slate-950 dark:text-slate-200 font-light lg:text-xl"
+        >
+          Experience the lucrative career of Scalp Micropigmentation-Micro Ink
+          Beauty offers training! Learn the fundamentals of Men & Women's SMP
+          and hair density techniques. Begin your SMP journey with succes!
+          Premium machine and kit Included along with lifetime support. Inquire
+          about training today!
         </p>
       </div>
       <div
@@ -107,22 +147,22 @@
       >
         <div class="w-full">
           <p
-            class="text-xl font-normal tracking-tight text-primary dark:text-slate-200 lg:text-8xl"
+            class="text-2xl font-normal tracking-tight text-primary dark:text-slate-200 lg:text-4xl"
           >
             Find us on
           </p>
-          <p class="mt-4 text-sm text-slate-950 dark:text-slate-200">
+          <p class="mt-4 text-xl text-slate-950 dark:text-slate-200">
             Do you have more questions or want to learn more? Don't hesitate to
             contact us.
           </p><br />
-          <p class="mt-4 text-sm text-slate-950 dark:text-slate-200">
+          <p class="mt-4 text-xl text-slate-950 dark:text-slate-200">
             <strong class="text-yellow-500 dark:text-yellow-500"
               >Phone:
             </strong>(408) 401-8988
           </p>
-          <p class="mt-4 text-sm text-slate-950 dark:text-slate-200">
+          <p class="mt-4 text-xl text-slate-950 dark:text-slate-200">
             <strong class="text-yellow-500 dark:text-yellow-500"
-              >1716 A Tully road San Jose ca 95122
+              >1716 A TULLY ROAD SAN JOSE, CA 95122
             </strong>
           </p>
         </div>
@@ -285,13 +325,13 @@
       >
         <div>
           <p
-            class="ext-xl tracking-tight font-medium text-primary dark:text-yellow-500 md:text-5xl"
+            class="text-xl tracking-tight font-medium text-primary dark:text-yellow-500 md:text-4xl"
           >
             MENTION THIS AD AND GET 15% OFF SMP & HAIR DENSITY SERVICES!
           </p>
           <br />
           <p
-            class="ext-xl tracking-tight font-medium text-primary dark:text-slate-200 md:text-3xl"
+            class="text-xl tracking-tight font-medium text-primary dark:text-slate-200 md:text-3xl"
           >
             FINANCING AVAILABLE!
           </p>
@@ -301,17 +341,18 @@
           >
             SERVICES
           </p>
-          <ul class="mt-4 text-sm text-slate-950 dark:text-slate-200">
+          <ul
+            style="list-style: disc;"
+            class="mt-4 text-sm text-slate-950 dark:text-slate-200 list-style"
+          >
             <li>Scalp Painting</li>
             <li>Scalp Micro Pigmentation</li>
             <li><strong>Facial: </strong>60 mins</li>
           </ul>
-          <p class="mt-4 text-sm text-slate-950 dark:text-slate-200">
+          <p class="text-sm text-slate-950 dark:text-slate-200">
             Full service 15 mins of 7 UV lights therapy and moisturizing spray
             <br />
-            <br />
             15 mins face mask, lip and eye rejuvenation
-            <br />
             <br />
             15 mins of facial massage
             <br />
@@ -334,101 +375,77 @@
       >
         <div>
           <p
-            class="text-xl text-primary dark:text-slate-200 lg:text-7xl tracking-tight"
+            class="text-xl text-primary dark:text-slate-200 lg:text-4xl tracking-tight"
           >
-            About Us
-          </p>
-          <p
-            class="mt-4 text-sm text-slate-950 dark:text-slate-200 md:max-w-xs lg:max-w-none"
-          >
-            Welcome to <strong class="text-yellow-500 dark:text-yellow-500"
-              >Micro Ink Beauty</strong
-            >, where artistry meets innovation in scalp painting. Our expert
-            team is dedicated to transforming your look with cutting-edge
-            techniques and personalized care.
-          </p>
-          <p
-            class="mt-4 text-sm text-slate-950 dark:text-slate-200 md:max-w-xs lg:max-w-none"
-          >
-            At <strong class="text-yellow-500 dark:text-yellow-500"
-              >Micro Ink Beauty</strong
-            >, we pride ourselves on having a highly skilled and professional
-            team. Each member is trained in the latest scalp painting methods to
-            ensure you receive the best possible results. Whether you're looking
-            to cover thinning areas or add a unique touch to your style, our
-            experts are here to make your vision a reality.
+            WHO IS MICRO INK BEAUTY AND WHAT DO THE OFFER?
           </p>
           <p
             class="mt-4 text-sm text-slate-950 dark:text-slate-200 md:max-w-xs lg:max-w-none"
           >
             <strong class="text-yellow-500 dark:text-yellow-500"
-              >Commitment to Client Satisfaction:
-            </strong>At Micro Ink Beauty, your satisfaction is our top priority.
-            We believe in building lasting relationships with our clients, which
-            is why we take the time to understand your individual needs and
-            preferences. From the initial consultation to the final result, we
-            ensure that every step of your journey is seamless and enjoyable.
-            Our goal is not just to enhance your appearance but also to boost
-            your confidence, leaving you feeling empowered and revitalized.
-            Experience the difference with our dedicated team, where your
-            transformation is in expert hands.
+              >Micro Ink Beauty
+            </strong>is the Bay Area's leading team of professionals that
+            specialize in Scalp Micropigmentation.
+          </p>
+          <p
+            class="mt-4 text-sm text-slate-950 dark:text-slate-200 md:max-w-xs lg:max-w-none"
+          >
+            Located in San Jose, <strong
+              class="text-yellow-500 dark:text-yellow-500"
+              >Micro Ink Beauty
+            </strong>offers a non-invasive solution for men, women, and anyone
+            experiencing hair loss and/or hair thinning. Services offered
+            include Men's Scalp Micropigmentation & Density service, Women's
+            Density service, Facial Micropigmentation for beards, Hairline
+            Restoration, and More!
+          </p>
+          <p
+            class="mt-4 text-sm text-slate-950 dark:text-slate-200 md:max-w-xs lg:max-w-none"
+          >
+            <strong class="text-yellow-500 dark:text-yellow-500"
+              >Visit Micro Ink Beauty to begin your Scalp Micropigmentation
+              journey!</strong
+            >
           </p>
         </div>
       </div>
-      <a
-        href="https://www.figma.com/@mikeandreuzza"
+      <div
         class="ring-1 lg:row-start-3 items-center h-full flex p-8 flex-col justify-center hover:ring-primary/5 dark:hover:ring-white/20 dark:ring-white/10 ring-primary/5 relative rounded-3xl overflow-hidden bg-white dark:bg-secondary shadow-xl dark:shadow-thick"
       >
-        <svg
-          class="w-24 h-24 lg:w-48 xl:h-64 xl:w-64 lg:h-48"
-          viewBox="0 0 90 90"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
+        <p
+          class="text-3xl mt-6 font-medium lg:text-4xl tracking-tight text-primary dark:text-slate-200"
         >
-          <g clip-path="url(#clip0_1_136)">
-            <path
-              d="M45 45.5C45 42.9804 46.0009 40.5641 47.7825 38.7825C49.5641 37.0009 51.9804 36 54.5 36C57.0196 36 59.4359 37.0009 61.2175 38.7825C62.9991 40.5641 64 42.9804 64 45.5C64 48.0196 62.9991 50.4359 61.2175 52.2175C59.4359 53.9991 57.0196 55 54.5 55C51.9804 55 49.5641 53.9991 47.7825 52.2175C46.0009 50.4359 45 48.0196 45 45.5Z"
-              fill="#1ABCFE"></path>
-            <path
-              d="M26 64.5C26 61.9804 27.0009 59.5641 28.7825 57.7825C30.5641 56.0009 32.9804 55 35.5 55H45V64.5C45 67.0196 43.9991 69.4359 42.2175 71.2175C40.4359 72.9991 38.0196 74 35.5 74C32.9804 74 30.5641 72.9991 28.7825 71.2175C27.0009 69.4359 26 67.0196 26 64.5V64.5Z"
-              fill="#0ACF83"></path>
-            <path
-              d="M45 17V36H54.5C57.0196 36 59.4359 34.9991 61.2175 33.2175C62.9991 31.4359 64 29.0196 64 26.5C64 23.9804 62.9991 21.5641 61.2175 19.7825C59.4359 18.0009 57.0196 17 54.5 17H45Z"
-              fill="#FF7262"></path>
-            <path
-              d="M26 26.5C26 29.0196 27.0009 31.4359 28.7825 33.2175C30.5641 34.9991 32.9804 36 35.5 36H45V17H35.5C32.9804 17 30.5641 18.0009 28.7825 19.7825C27.0009 21.5641 26 23.9804 26 26.5V26.5Z"
-              fill="#F24E1E"></path>
-            <path
-              d="M26 45.5C26 48.0196 27.0009 50.4359 28.7825 52.2175C30.5641 53.9991 32.9804 55 35.5 55H45V36H35.5C32.9804 36 30.5641 37.0009 28.7825 38.7825C27.0009 40.5641 26 42.9804 26 45.5V45.5Z"
-              fill="#A259FF"></path>
-          </g>
-          <defs>
-            <clipPath id="clip0_1_136">
-              <rect
-                width="38"
-                height="57"
-                fill="white"
-                transform="translate(26 17)"></rect>
-            </clipPath>
-          </defs>
-        </svg>
-        <p class="text-xl text-primary dark:text-white lg:text-2xl mt-6">
-          Figma Community
+          EXPERIENCE SCALP PAINTING ART
         </p>
-      </a>
+        <p
+          class="mt-4 text-sm text-slate-950 dark:text-slate-200 font-light lg:text-xl"
+        >
+          Are you looking for an innovative and elegant way to transform your
+          image? Scalp Painting is the trend you need to know. This
+          revolutionary method combines coloring and design techniques to offer
+          you a fresh, modern, and completely personalized look.
+        </p>
+        <p
+          class="mt-4 text-sm text-slate-950 dark:text-slate-200 font-light lg:text-xl"
+        >
+          Scalp Painting is an advanced hair coloring technique that focuses on
+          painting the scalp to create unique visual effects. This technique not
+          only enhances your style but also offers creative solutions for common
+          issues such as baldness or thinning hair.
+        </p>
+      </div>
       <div
         class="lg:row-span-2 ring-1 dark:ring-white/10 ring-primary/5 hover:ring-primary/5 bg-white dark:bg-secondary dark:hover:ring-white/20 overflow-hidden duration-300 shadow-xl dark:shadow-thick rounded-3xl p-8"
       >
         <div class="-mr-24">
           <img
             src="/images/scalp-painting.jpg"
-            class="rounded-2xl object-cover ring-1 h-64 w-full lg:h-auto dark:ring-white/10 ring-primary/5 bg-tertiary"
+            class="rounded-2xl object-cover ring-1 h-auto w-4/5 lg:h-auto dark:ring-white/10 ring-primary/5 bg-tertiary"
             alt=""
           />
         </div>
         <div class="mt-8">
-          <div class="flex flex-wrap">
-          </div>
+          <div class="flex flex-wrap"></div>
           <p
             class="ext-xl tracking-tight font-medium text-primary dark:text-slate-200 md:text-6xl mt-6"
           >
@@ -487,10 +504,10 @@
               placeholder="Enter your email"
             />
             <div class="mt-4 sm:ml-2 sm:mt-0 sm:flex-shrink-0">
-              <button
-                type="submit"
+              <a
+                href="mailto:escobarmernestoe@gmail.com"
                 class="text-sm py-2 w-full px-4 h-12 font-semibold focus:ring-2 rounded-lg bg-primary dark:bg-white dark:text-primary dark:hover:text-white hover:text-primary dark:hover:bg-white/5 hover:bg-primary/10 text-white flex duration-200 focus:ring-offset-2 focus:ring-inline-flex items-center justify-between"
-                >Subscribe</button
+                >Subscribe</a
               >
             </div>
           </form>
@@ -556,28 +573,32 @@
         class="lg:col-span-2 xl:col-span-1 h-full flex flex-col justify-between lg:row-span-2 ring-1 dark:ring-white/10 ring-primary/5 bg-white dark:bg-secondary shadow-xl dark:shadow-thick rounded-3xl p-8"
       >
         <p
-          class="text-xl tracking-tight font-medium text-primary dark:text-slate-200 md:text-3xl"
+          class="text-xl tracking-tight font-medium text-primary dark:text-slate-200 md:text-2xl"
         >
-          <span class="text-xl md:text-5xl"><strong>How It Works</strong></span>
+          <span class="text-xl md:text-3xl"
+            ><strong
+              >WHAT IS THE DIFFERENCE BETWEEN SMP AND SCLAP PAINTING?</strong
+            ></span
+          >
+          <br />
+          <br />
+          <strong class="text-yellow-500 dark:text-yellow-500">SMP: </strong>is
+          flor clients who are bald at the hairline or are completely bald, and
+          for those with carring. An SMP procedure takes 2-5 hours per session
+          and will require 2-4 sessions to complete the procedure. SMP lasts 2-3
+          years depending on skin type, after which clients need to come back
+          for a touch-up. It uses organic pigment made in the USA.
           <br />
           <br />
           <strong class="text-yellow-500 dark:text-yellow-500"
-            >Initial Consultation:
-          </strong>Our stylists will help you decide on the best design and
-          color for you, taking into account your specific desires and needs.
-          <br />
-          <br />
-          <strong class="text-yellow-500 dark:text-yellow-500"
-            >Preparation:
-          </strong>Cleaning and preparing the scalp to ensure optimal
-          application, creating the perfect environment for the treatment.
-          <br />
-          <br />
-          <strong class="text-yellow-500 dark:text-yellow-500"
-            >Maintenance:
-          </strong>We provide recommendations and post-treatment care to keep
-          your new look impeccable, ensuring your transformation lasts over
-          time.
+            >Scalp Painting:
+          </strong>is for clients who still have hair but are thinning. Scalp
+          painting requires one full session, followed by a touch-up session two
+          weeks later. There may be a potential third session for additional
+          touch-ups, depending on your lifestyle. Scalp painting lasts 1-2 years
+          depending on your skin type. It uses organic pigment with beauty serum
+          from Korea, which may hep trigger hair follicles to potentially
+          regrow.
         </p>
       </div>
     </div>
