--- a/src/components/landing/Structure.astro
+++ b/src/components/landing/Structure.astro
@@ -147,14 +147,14 @@
       >
         <div class="w-full">
           <p
-            class="text-2xl font-normal tracking-tight text-primary dark:text-slate-200 lg:text-4xl"
+            class="text-5xl font-normal tracking-tight text-primary dark:text-slate-200 lg:text-6xl"
           >
             Find us on
           </p>
-          <p class="mt-4 text-xl text-slate-950 dark:text-slate-200">
+          <p class="mt-4 text-2xl text-slate-950 dark:text-slate-200">
             Do you have more questions or want to learn more? Don't hesitate to
             contact us.
-          </p><br />
+          </p>
           <p class="mt-4 text-xl text-slate-950 dark:text-slate-200">
             <strong class="text-yellow-500 dark:text-yellow-500"
               >Phone:
@@ -166,10 +166,8 @@
             </strong>
           </p>
         </div>
-        <div
-          class="grid mt-4 grid-cols-4 md:grid-cols-8 lg:grid-cols-4 gap-y-4 gap-4 justify-center w-full"
-        >
-          <a
+        <div class="grid gap-10 mt-6 grid-cols-2 place-content-stretch">
+          <!-- <a
             href="#_"
             class="flex items-center justify-center aspect-square shadow-xl dark:shadow-thick hover:bg-zinc-100 dark:hover:bg-primary ring-1 bg-zinc-50 dark:ring-white/10 ring-primary/5 dark:bg-tertiary rounded-lg hover:ring-primary/5 dark:hover:ring-white/20 duration-300 group transition-all h-12 w-12"
           >
@@ -186,8 +184,8 @@
                 d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z"
               ></path><path d="M3 7l9 6l9 -6"></path></svg
             >
-          </a>
-          <a
+          </a> -->
+          <!-- <a
             href="#_"
             class="flex items-center justify-center aspect-square shadow-xl dark:shadow-thick hover:bg-zinc-100 dark:hover:bg-primary ring-1 bg-zinc-50 dark:ring-white/10 ring-primary/5 dark:bg-tertiary rounded-lg hover:ring-primary/5 dark:hover:ring-white/20 duration-300 group transition-all h-12 w-12"
           >
@@ -204,8 +202,8 @@
                 d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
               ></path></svg
             >
-          </a>
-          <a
+          </a> -->
+          <!-- <a
             href="#_"
             class="flex items-center justify-center aspect-square shadow-xl dark:shadow-thick hover:bg-zinc-100 dark:hover:bg-primary ring-1 bg-zinc-50 dark:ring-white/10 ring-primary/5 dark:bg-tertiary rounded-lg hover:ring-primary/5 dark:hover:ring-white/20 duration-300 group transition-all h-12 w-12"
           >
@@ -224,9 +222,9 @@
                 d="M14 13h7a3.5 3.5 0 0 0 -7 0v2a3.5 3.5 0 0 0 6.64 1"
               ></path><path d="M16 6l3 0"></path></svg
             >
-          </a>
+          </a> -->
           <a
-            href="#_"
+            href="https://www.instagram.com/microinkbeauty_bayarea"
             class="flex items-center justify-center aspect-square shadow-xl dark:shadow-thick hover:bg-zinc-100 dark:hover:bg-primary ring-1 bg-zinc-50 dark:ring-white/10 ring-primary/5 dark:bg-tertiary rounded-lg hover:ring-primary/5 dark:hover:ring-white/20 duration-300 group transition-all h-12 w-12"
           >
             <svg
@@ -243,7 +241,7 @@
               ></path></svg
             >
           </a>
-          <a
+          <!-- <a
             href="#_"
             class="flex items-center justify-center aspect-square shadow-xl dark:shadow-thick hover:bg-zinc-100 dark:hover:bg-primary ring-1 bg-zinc-50 dark:ring-white/10 ring-primary/5 dark:bg-tertiary rounded-lg hover:ring-primary/5 dark:hover:ring-white/20 duration-300 group transition-all h-12 w-12"
           >
@@ -262,8 +260,8 @@
                 d="M6.4 19c3.5 -3.5 6 -6.5 14.5 -6.4"></path><path
                 d="M3.1 10.75c5 0 9.814 -.38 15.314 -5"></path></svg
             >
-          </a>
-          <a
+          </a> -->
+          <!-- <a
             href="#_"
             class="flex items-center justify-center aspect-square shadow-xl dark:shadow-thick hover:bg-zinc-100 dark:hover:bg-primary ring-1 bg-zinc-50 dark:ring-white/10 ring-primary/5 dark:bg-tertiary rounded-lg hover:ring-primary/5 dark:hover:ring-white/20 duration-300 group transition-all h-12 w-12"
           >
@@ -280,8 +278,8 @@
                 d="M4 4l11.733 16h4.267l-11.733 -16z"></path><path
                 d="M4 20l6.768 -6.768m2.46 -2.46l6.772 -6.772"></path></svg
             >
-          </a>
-          <a
+          </a> -->
+          <!-- <a
             href="#_"
             class="flex items-center justify-center aspect-square shadow-xl dark:shadow-thick hover:bg-zinc-100 dark:hover:bg-primary ring-1 bg-zinc-50 dark:ring-white/10 ring-primary/5 dark:bg-tertiary rounded-lg hover:ring-primary/5 dark:hover:ring-white/20 duration-300 group transition-all h-12 w-12"
           >
@@ -300,8 +298,9 @@
               ></path><path d="M12 16l0 -5"></path><path
                 d="M16 16v-3a2 2 0 0 0 -4 0"></path></svg
             >
-          </a><a
-            href="#_"
+          </a> -->
+          <a
+            href="https://www.facebook.com/linda.vi.52"
             class="flex items-center justify-center aspect-square shadow-xl dark:shadow-thick hover:bg-zinc-100 dark:hover:bg-primary ring-1 bg-zinc-50 dark:ring-white/10 ring-primary/5 dark:bg-tertiary rounded-lg hover:ring-primary/5 dark:hover:ring-white/20 duration-300 group transition-all h-12 w-12"
           >
             <svg
@@ -437,10 +436,10 @@
       <div
         class="lg:row-span-2 ring-1 dark:ring-white/10 ring-primary/5 hover:ring-primary/5 bg-white dark:bg-secondary dark:hover:ring-white/20 overflow-hidden duration-300 shadow-xl dark:shadow-thick rounded-3xl p-8"
       >
-        <div class="-mr-24">
+        <div class="m-0">
           <img
             src="/images/scalp-painting.jpg"
-            class="rounded-2xl object-cover ring-1 h-auto w-4/5 lg:h-auto dark:ring-white/10 ring-primary/5 bg-tertiary"
+            class="rounded-2xl object-cover ring-1 h-auto w-fit lg:h-auto dark:ring-white/10 ring-primary/5 bg-tertiary"
             alt=""
           />
         </div>
@@ -505,7 +504,7 @@
             />
             <div class="mt-4 sm:ml-2 sm:mt-0 sm:flex-shrink-0">
               <a
-                href="mailto:escobarmernestoe@gmail.com"
+                href="mailto:microinkbeauty@gmail.com"
                 class="text-sm py-2 w-full px-4 h-12 font-semibold focus:ring-2 rounded-lg bg-primary dark:bg-white dark:text-primary dark:hover:text-white hover:text-primary dark:hover:bg-white/5 hover:bg-primary/10 text-white flex duration-200 focus:ring-offset-2 focus:ring-inline-flex items-center justify-between"
                 >Subscribe</a
               >
@@ -575,7 +574,7 @@
         <p
           class="text-xl tracking-tight font-medium text-primary dark:text-slate-200 md:text-2xl"
         >
-          <span class="text-xl md:text-3xl"
+          <span class="text-2xl md:text-3xl"
             ><strong
               >WHAT IS THE DIFFERENCE BETWEEN SMP AND SCLAP PAINTING?</strong
             ></span
