--- a/src/components/landing/Structure.astro
+++ b/src/components/landing/Structure.astro
@@ -84,7 +84,7 @@
               Uses specially formulated pigments for cosmetic scalp tattooing.
             </li>
             <li>Non-invasive, unlike hair transplant.</li>
-            <li>Minimun recovery time.</li>
+            <li>Minimum recovery time.</li>
             <li>Replicates the look of hair follicles.</li>
             <li>Gives the illusion of a fuller, denser head of hair.</li>
             <li>
@@ -162,7 +162,7 @@
           </p>
           <p class="mt-4 text-xl text-slate-950 dark:text-slate-200">
             <strong class="text-yellow-500 dark:text-yellow-500"
-              >1716 A TULLY ROAD SAN JOSE, CA 95122
+              >1716 A TULLY ROAD, <br />SAN JOSE, CA 95122
             </strong>
           </p>
         </div>
