--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -46,8 +46,8 @@ import '@fontsource-variable/inter';
     --aw-font-serif: 'InterVariable';
     --aw-font-heading: 'InterVariable';
 
-    --aw-color-primary: #422006;
-    --aw-color-secondary: #713f12;
+    --aw-color-primary: #713F12;
+    --aw-color-secondary: #854d0e;
     --aw-color-accent: rgb(109 40 217);
 
     --aw-color-text-heading: rgb(247, 248, 248);
