--- a/src/components/ui/Form.astro
+++ b/src/components/ui/Form.astro
@@ -13,7 +13,7 @@ const { inputs, textarea, disclaimer, button = 'Contact us', description = '' } 
           name && (
             <div class="mb-6">
               {label && (
-                <label for={name} class="block text-sm font-medium text-black">
+                <label for={name} class="block text-sm font-medium">
                   {label}
                 </label>
               )}
@@ -24,7 +24,7 @@ const { inputs, textarea, disclaimer, button = 'Contact us', description = '' } 
                 autocomplete={autocomplete}
                 placeholder={placeholder}
                 required
-                class="py-3 px-4 block w-full text-md rounded-lg border border-gray-200 dark:border-yellow-400 bg-white dark:bg-yellow-600"
+                class="py-3 px-4 block w-full text-md rounded-lg border border-gray-200 dark:border-neutral-700 bg-white dark:bg-neutral-700"
               />
             </div>
           )
@@ -34,7 +34,7 @@ const { inputs, textarea, disclaimer, button = 'Contact us', description = '' } 
   {
     textarea && (
       <div>
-        <label for="textarea" class="block text-sm font-medium text-black">
+        <label for="textarea" class="block text-sm font-medium">
           {textarea.label}
         </label>
         <textarea
@@ -43,7 +43,7 @@ const { inputs, textarea, disclaimer, button = 'Contact us', description = '' } 
           rows={textarea.rows ? textarea.rows : 4}
           placeholder={textarea.placeholder}
           required
-          class="py-3 px-4 block w-full text-md rounded-lg border border-gray-200 dark:border-yellow-400 bg-white dark:bg-yellow-600"
+          class="py-3 px-4 block w-full text-md rounded-lg border border-gray-200 dark:border-neutral-700 bg-white dark:bg-neutral-700"
         />
       </div>
     )
@@ -58,11 +58,11 @@ const { inputs, textarea, disclaimer, button = 'Contact us', description = '' } 
             name="disclaimer"
             type="checkbox"
             required
-            class="cursor-pointer mt-1 py-3 px-4 block w-full text-md rounded-lg border border-gray-200 dark:border-yellow-400 bg-white dark:bg-yellow-600"
+            class="cursor-pointer mt-1 py-3 px-4 block w-full text-md rounded-lg border border-gray-200 dark:border-yellow-400 bg-white dark:bg-neutral-700"
           />
         </div>
         <div class="ml-3">
-          <label for="disclaimer" class="cursor-pointer select-none text-sm text-black">
+          <label for="disclaimer" class="cursor-pointer select-none text-sm">
             {disclaimer.label}
           </label>
         </div>
@@ -83,7 +83,7 @@ const { inputs, textarea, disclaimer, button = 'Contact us', description = '' } 
   {
     description && (
       <div class="mt-3 text-center">
-        <p class="text-sm text-black">{description}</p>
+        <p class="text-sm">{description}</p>
       </div>
     )
   }
