--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Content from '~/components/widgets/Content.astro';
 //import CallToAction from '~/components/widgets/CallToAction.astro';
 
 const metadata = {
-  title: 'AstroWind — Free template for creating websites with Astro + Tailwind CSS',
+  title: 'Micro Ink Beauty - Scalp Micropigmentation',
   ignoreTitleTemplate: true,
 };
 ---
@@ -71,9 +71,9 @@ const metadata = {
   <!-- Content Widget **************** -->
 
   <Content
-    isReversed
-    tagline=""
-    title="WHAT IS SCALP MICROPIGMENTATION?"
+  tagline=""
+  title="WHAT IS SCALP MICROPIGMENTATION?"
+  isReversed
     items={[
       {
         title: 'Uses specially formulated pigments for cosmetic scalp tattooing.',
@@ -206,7 +206,7 @@ const metadata = {
       },
     ]}
     image={{
-      src: 'https://dl.dropboxusercontent.com/scl/fi/gjcyzikv0cvmgihzqgr27/Picture-2-01.png?rlkey=plfj1enqoghh08aav1dkvei0l&dl=0',
+      src: 'https://dl.dropboxusercontent.com/scl/fi/dxpu3xyg4dolgrnpweebu/Picture-2-01.jpg?rlkey=02wyl28pqzkes8n6j7w2eopza&dl=0',
       alt: 'Astronauts Image',
     }}
   >
