--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -143,7 +143,7 @@ const metadata = {
       },
     ]}
     image={{
-      src: 'https://images.unsplash.com/photo-1525909002-1b05e0c869d8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80',
+      src: 'https://dl.dropboxusercontent.com/scl/fi/d1ai5jvw3i5bv25k20fa3/Picture-1.png?rlkey=lc0s4p0mhaj90xgbhb44vig9r&dl=0',
       alt: 'Features Image',
     }}
   >
@@ -198,31 +198,31 @@ const metadata = {
     title="Words from real customers"
     testimonials={[
       {
-        testimonial: `The designs are not only visually appealing but also highly professional. The templates have saved me a significant amount of time while helping me make a lasting impression on my clients.`,
-        name: 'Emily Kennedy',
-        job: 'Front-end developer',
-        image: {
-          src: 'https://images.unsplash.com/photo-1618835962148-cf177563c6c0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=930&q=80',
-          alt: 'Emily Kennedy Image',
-        },
+        testimonial: `Scalp Painting has truly transformed my appearance in a remarkable way. The meticulous and artistic approach has not only enhanced my look but also significantly boosted my confidence and sense of style. I now feel more assured and fashionable than ever before.`,
+        name: 'David Williams',
+        job: 'Entrepreneur',
+        // image: {
+        //   src: 'https://images.unsplash.com/photo-1618835962148-cf177563c6c0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=930&q=80',
+        //   alt: 'Emily Kennedy Image',
+        // },
       },
       {
-        testimonial: `It beautifully showcases my work, with its clean and elegant design that lets my photographs shine. Customization was a breeze, even for a non-tech person like me. The result is a professional and immersive portfolio that's garnered numerous compliments.`,
-        name: 'Sarah Hansen',
-        job: 'Photographer',
-        image: {
-          src: 'https://images.unsplash.com/photo-1561406636-b80293969660?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80',
-          alt: 'Sarah Hansen Image',
-        },
+        testimonial: `The technique is astonishingly natural and seamlessly integrates with my existing hair. The results are so convincing that no one can tell it's paint; everyone genuinely believes it’s my own hair. The attention to detail and expertise involved make it virtually indistinguishable from natural growth.`,
+        name: 'Sarah Wilson',
+        job: 'Engineer',
+        // image: {
+        //   src: 'https://images.unsplash.com/photo-1561406636-b80293969660?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80',
+        //   alt: 'Sarah Hansen Image',
+        // },
       },
       {
-        testimonial: `I discovered these templates and I'm impressed by their variety and quality. They've helped me establish a consistent brand image across my marketing and social platforms, elevating my business's overall appearance.`,
-        name: 'Mark Wilkinson',
-        job: 'Small business owner',
-        image: {
-          src: 'https://images.unsplash.com/photo-1545167622-3a6ac756afa4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=824&q=80',
-          alt: 'Mark Wilkinson Image',
-        },
+        testimonial: `The entire process was remarkably straightforward, and the outcome exceeded all expectations. The team's attention to detail and dedication to providing exceptional service were truly outstanding. The result is nothing short of spectacular, reflecting both their expertise and commitment to excellence.`,
+        name: 'Matthew Jackson',
+        job: 'Architect',
+        // image: {
+        //   src: 'https://images.unsplash.com/photo-1545167622-3a6ac756afa4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=824&q=80',
+        //   alt: 'Mark Wilkinson Image',
+        // },
       },
     ]}
   />
@@ -233,11 +233,11 @@ const metadata = {
     actions={[
       {
         variant: 'primary',
-        text: 'Start exploring',
-        href: '/',
+        text: 'Get in Touch',
+        href: '/contact',
       },
     ]}
-    title="Dive into our template collection"
-    subtitle="Whether you're in business, design, or education, our templates are here to elevate your projects."
+    title="Call for <span class='text-yellow-500'>FREE</span> Consultation."
+    subtitle="(408) 401-8988"
   />
 </Layout>
