--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -26,7 +26,7 @@ const {
 
   {
     inputs && (
-      <div class="flex flex-col max-w-xl mx-auto rounded-lg backdrop-blur border border-gray-200 dark:border-gray-700 bg-white dark:bg-yellow-500 shadow p-4 sm:p-6 lg:p-8 w-full">
+      <div class="flex flex-col max-w-xl mx-auto rounded-lg backdrop-blur border border-gray-200 dark:border-gray-700 bg-white dark:bg-neutral-800 shadow p-4 sm:p-6 lg:p-8 w-full">
         <FormContainer
           inputs={inputs}
           textarea={textarea}
