--- a/src/components/widgets/Features2.astro
+++ b/src/components/widgets/Features2.astro
@@ -28,10 +28,10 @@ const {
     classes={{
       container: 'gap-4 md:gap-6',
       panel:
-        'rounded-lg shadow-[0_4px_30px_rgba(0,0,0,0.1)] dark:shadow-[0_4px_30px_rgba(0,0,0,0.1)] backdrop-blur border border-[#ffffff29] bg-white text-black dark:bg-yellow-600 p-6',
+        'rounded-lg shadow-[0_4px_30px_rgba(0,0,0,0.1)] dark:shadow-[0_4px_30px_rgba(0,0,0,0.1)] backdrop-blur border border-[#ffffff29] bg-white dark:bg-neutral-800 p-6',
       // panel:
       //   "text-center bg-page items-center md:text-left rtl:md:text-right md:items-start p-6 p-6 rounded-md shadow-xl dark:shadow-none dark:border dark:border-slate-800",
-      icon: 'w-12 h-12 mb-6 text-primary',
+      icon: 'w-12 h-12 mb-6 text-yellow-600',
       ...((classes?.items as Record<string, never>) ?? {}),
     }}
   />
