--- a/src/components/widgets/HeroText.astro
+++ b/src/components/widgets/HeroText.astro
@@ -30,7 +30,7 @@ const {
         {
           tagline && (
             <p
-              class="text-base text-secondary dark:text-yellow-500 font-bold tracking-wide uppercase"
+              class="text-2xl text-secondary dark:text-yellow-500 font-bold tracking-wide uppercase"
               set:html={tagline}
             />
           )
