--- a/src/components/widgets/Note.astro
+++ b/src/components/widgets/Note.astro
@@ -2,8 +2,8 @@
 //import { Icon } from 'astro-icon/components';
 ---
 
-<section class="bg-blue-50 dark:bg-slate-800 not-prose">
-  <div class="max-w-6xl mx-auto px-4 sm:px-6 py-4 text-md text-center font-medium">
+<section class="bg-zinc-100 shadow-xl dark:bg-zinc-800 not-prose">
+  <div class="max-w-6xl mx-auto px-4 sm:px-6 py-4 text-xl text-center font-medium">
     <span class="font-bold">
     <span class="dark:text-yellow-500">MENTION THIS AD AND GET 15% OFF SMP & HAIR DENSITY SERVICES!</span><br />
     FINANCING AVAILABLE!
