--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -12,7 +12,7 @@ const metadata = {
 <Layout metadata={metadata}>
   <!-- HeroText Widget ******************* -->
 
-  <HeroText tagline="Contact" title="Let's Connect!" />
+  <HeroText tagline="<span class='text-yellow-500'>Contact</span>" title="Let's Connect!" />
 
   <ContactUs
     id="form"
