--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -126,7 +126,7 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="bg">
-      <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
+      <div class="absolute inset-0 bg-zinc-100 dark:bg-transparent"></div>
     </Fragment>
   </Content>
 
@@ -174,7 +174,7 @@ const metadata = {
     <Fragment slot="content">Identifying the Ideal Candidates for Scalp Micropigmentation</Fragment>
 
     <Fragment slot="bg">
-      <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
+      <div class="absolute inset-0 bg-zinc-100 dark:bg-transparent"></div>
     </Fragment>
   </Content>
 
@@ -213,7 +213,7 @@ const metadata = {
     <Fragment slot="content">Designed to foster growth and success.</Fragment>
 
     <Fragment slot="bg">
-      <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
+      <div class="absolute inset-0 bg-zinc-100 dark:bg-transparent"></div>
     </Fragment>
   </Content>
 
