--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -71,8 +71,7 @@ const metadata = {
   <!-- Content Widget **************** -->
 
   <Content
-  tagline=""
-  title="WHAT IS SCALP MICROPIGMENTATION?"
+  title="<span class='text-3xl md:text-4xl'>WHAT IS SCALP MICROPIGMENTATION?</span>"
   isReversed
     items={[
       {
