--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -57,7 +57,7 @@ const metadata = {
       },
       {
         title: 'Location',
-        description: '1716 A TULLY ROAD SAN JOSE, CA 95122',
+        description: '1716 A TULLY ROAD, SAN JOSE, CA 95122',
         icon: 'tabler:map-pin',
       },
     ]}
