--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,7 +56,7 @@ const metadata = {
       {
         title: 'SMP:',
         description:
-          'is flor clients who are bald at the hairline or are completely bald, and for those with carring. An SMP procedure takes 2-5 hours per session and will require 2-4 sessions to complete the procedure. SMP lasts 2-3 years depending on skin type, after which clients need to come back for a touch-up. It uses organic pigment made in the USA.',
+          'is for clients who are bald at the hairline or are completely bald, and for those with carring. An SMP procedure takes 2-5 hours per session and will require 2-4 sessions to complete the procedure. SMP lasts 2-3 years depending on skin type, after which clients need to come back for a touch-up. It uses organic pigment made in the USA.',
         icon: 'tabler:info-octagon',
       },
       {
@@ -85,7 +85,7 @@ const metadata = {
           '',
       },
       {
-        title: 'Minimun recovery time.',
+        title: 'Minimum recovery time.',
         description:
           '',
       },
