--- a/src/components/widgets/Note.astro
+++ b/src/components/widgets/Note.astro
@@ -3,9 +3,10 @@
 ---
 
 <section class="bg-zinc-100 shadow-xl dark:bg-zinc-800 not-prose">
-  <div class="max-w-6xl mx-auto px-4 sm:px-6 py-4 text-xl text-center font-medium">
+  <div class="max-w-6xl mx-auto px-4 sm:px-6 py-4 text-3xl text-center font-medium">
     <span class="font-bold">
-    <span class="dark:text-yellow-500">MENTION THIS AD AND GET 15% OFF SMP & HAIR DENSITY SERVICES!</span><br />
-    FINANCING AVAILABLE!
+    Call for
+    <span class="dark:text-yellow-500"> FREE </span>Consultation.<br />
+    (408) 401-8988
   </div>
 </section>
