--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '~/layouts/PageLayout.astro';
 import HeroText from '~/components/widgets/HeroText.astro';
-import ContactUs from '~/components/widgets/Contact.astro';
+//import ContactUs from '~/components/widgets/Contact.astro';
 import Features2 from '~/components/widgets/Features2.astro';
 
 const metadata = {
@@ -14,7 +14,7 @@ const metadata = {
 
   <HeroText tagline="<span class='text-yellow-500'>Contact</span>" title="Let's Connect!" />
 
-  <ContactUs
+  <!-- <ContactUs
     id="form"
     title="CURRENTLY OPERATE IN SAN JOSE, CA."
     subtitle="Call for <span class='text-yellow-500'>FREE</span> Consultation. <span class='text-yellow-500'>(408) 401-8988</span>"
@@ -38,7 +38,7 @@ const metadata = {
         'By submitting this contact form, you acknowledge and agree to the collection of your personal information.',
     }}
     description="Our support team typically responds within 24 business hours."
-  />
+  /> -->
 
   <!-- Features2 Widget ************** -->
 
