--- a/src/components/widgets/Note.astro
+++ b/src/components/widgets/Note.astro
@@ -3,7 +3,7 @@
 ---
 
 <section class="bg-zinc-100 shadow-xl dark:bg-zinc-800 not-prose">
-  <div class="max-w-6xl mx-auto px-4 sm:px-6 py-4 text-3xl text-center font-medium">
+  <div class="max-w-6xl mx-auto px-4 sm:px-6 text-2xl py-4 lg:text-3xl text-center font-medium">
     <span class="font-bold">
     Call for
     <span class="dark:text-yellow-500"> FREE </span>Consultation.<br />
